@@ -1,0 +1,9 @@
+Title: Fixed broken "tiled" host view with German localized GUI
+Level: 1
+Component: multisite
+Compatible: compat
+Version: 1.2.8p18
+Date: 1487592243
+Class: fix
+
+
