@@ -11,6 +11,7 @@
     * 4365 FIX: Service availability: Host down could not be rewritten to other states like CRIT
     * 4371 FIX: Dashboards: Folder filtered globe dashlets now link to filtered views
     * 4382 FIX: Views: Silently ignore configured but not existing view filters
+    * 4383 FIX: Fixed broken "tiled" host view with German localized GUI
 
     WATO:
     * 4373 FIX: Timeperiods: iCal events with multiple days can now be imported
